--- a/src/Views/Dashboard/Dashboard.module.scss
+++ b/src/Views/Dashboard/Dashboard.module.scss
@@ -4,6 +4,7 @@
 	justify-content: flex-start;
 	height: 100vh;
 	width: 100%;
+	overflow-y: hidden;
 }
 
 .Dashboard-dt-container {
@@ -37,9 +38,11 @@
 	flex-direction: column;
 	gap: 16px;
 	width: 100%;
-	height: fit-content;
-	padding-bottom: 24px;
+	height: 100%;
+	padding-bottom: 0;
 	overflow-x: hidden;
+	overflow-y: auto;
+	padding-right: 4px;
 
 	> * {
 		transform: translateX(100%);
@@ -63,6 +66,26 @@
 		> *:nth-child(#{$i}) {
 			animation-delay: calc(0s + ($i - 1) * 0.12s);
 		}
+	}
+
+	&::-webkit-scrollbar {
+		width: 6px;
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: #f0f0f0;
+		border-radius: 4px;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background-color: rgba(52, 120, 246, 0.5);
+		border-radius: 4px;
+
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+	}
+
+	&::-webkit-scrollbar-thumb:hover {
+		background-color: rgba(20, 89, 219, 0.5);
 	}
 }
 
